# echo

./: .gitignore  .prettierrc  CONTRIBUTING.md  README.md  SETUP.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: README.md  package.json  pyproject.toml  tsconfig.json  tsconfig.tsbuildinfo
apps/api/src/: index.ts  main.py
apps/api/src/lib/functions/: __init__.py  history_formatter.py  inline_editor.py
apps/api/src/lib/models/: __init__.py  gemini.py
apps/api/src/lib/prompts/: __init__.py  response.py  title.py
apps/api/src/models/: base.py  gemini.py
apps/api/src/prompts/: title.py
apps/api/src/routes/: __init__.py  index.ts
apps/api/src/routes/chat/: __init__.py  create_chat.py  get_chats.py  init_chat.py  main.py
apps/api/src/routes/conversation/: allConversations.ts  deleteConversation.ts  index.ts  initConversation.ts  newConversation.ts  renameConversation.ts
apps/api/src/routes/discussion/: __init__.py  create_discussion.py  delete_discussion.py  get_discussions.py  main.py  rename_discussion.py
apps/api/src/routes/message/: allMessages.ts  index.ts  initMessage.ts  newMessage.ts
apps/db-worker/: README.md  eslint.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/docs/: package.json  tsconfig.json
apps/job-worker/: README.md  package.json  tsconfig.tsbuildinfo
apps/mapper/: package.json
apps/notification/: package.json
apps/web/: .env.example  .eslintrc.js  README.md  eslint.config.js  package-lock.json  (+4 more)
docker/: .env.example  docker-compose.yml  package.json
(+51 files in other folders)
